--- a/client/app/styles/core/_merchant.scss
+++ b/client/app/styles/core/_merchant.scss
@@ -4,7 +4,10 @@
     padding: 30px 16px 30px;
     border-radius: $border-radius-primary;
   }
-
+  .logo{
+    margin: 0 auto;
+    width:70px;
+  }
   .agreement-banner {
     margin: 0 auto;
     width: 250px;
