--- a/client/app/styles/core/_merchant.scss
+++ b/client/app/styles/core/_merchant.scss
@@ -4,9 +4,9 @@
     padding: 30px 16px 30px;
     border-radius: $border-radius-primary;
   }
-  .logo{
+  .llogo{
     margin: 0 auto;
-    width:70px;
+    width:30px;
   }
   .agreement-banner {
     margin: 0 auto;
